add concurrent downloading, piece verification, and bug fixes